force-app/main/default/objects/AcctSeedERP__Material__c/fields/AcctSeedERP__Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Inventory_Type__c</fullName>
    <formula>TEXT(AcctSeedERP__Product__r.AcctSeed__Inventory_Type__c )</formula>
    <label>Inventory Type</label>
    <type>Text</type>
</CustomField>