force-app/main/default/objects/AcctSeedERP__Material__c/fields/AcctSeedERP__Manufacturing_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Manufacturing_Order_Template__c</fullName>
    <formula>AcctSeedERP__Product__r.AcctSeedERP__Manufacturing_Order_Template__r.Name</formula>
    <label>Manufacturing Order Template</label>
    <type>Text</type>
</CustomField>