force-app/main/default/objects/AcctSeedERP__Material__c/fields/AcctSeedERP__Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Project_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>