force-app/main/default/objects/AcctSeedERP__Material__c/fields/AcctSeedERP__Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Quantity_Needed__c</fullName>
    <formula>AcctSeedERP__Project__r.AcctSeedERP__Quantity_Ordered__c * AcctSeedERP__Quantity_Per_Unit__c- AcctSeedERP__Quantity_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Needed</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>