force-app/main/default/objects/AcctSeedERP__Material__c/fields/AcctSeedERP__Quantity_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Quantity_Per_Unit__c</fullName>
    <label>Quantity Ordered</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>