force-app/main/default/objects/AcctSeedERP__Material__c/fields/Actual_Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity_Sold__c</fullName>
    <formula>IF(Inventory_Product__c,  AcctSeedERP__Quantity_Allocated__c , AcctSeedERP__Quantity_Per_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Quantity Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>