force-app/main/default/objects/AcctSeedERP__Material__c/fields/Applied_Partner_Program_Discount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Partner_Program_Discount__c</fullName>
    <label>Applied Partner Program Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>