force-app/main/default/objects/AcctSeedERP__Material__c/fields/Case_Part__c.field-meta.xml
<CustomField>
    <fullName>Case_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Part</label>
    <referenceTo>Case_Part__c</referenceTo>
    <relationshipLabel>Materials</relationshipLabel>
    <relationshipName>Materials</relationshipName>
    <type>Lookup</type>
</CustomField>