force-app/main/default/objects/AcctSeedERP__Material__c/fields/GMBLASERP__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>