force-app/main/default/objects/AcctSeedERP__Material__c/fields/Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage__c</fullName>
    <label>Insurance Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>