force-app/main/default/objects/AcctSeedERP__Material__c/fields/Inventory_Product__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Product__c</fullName>
    <formula>AcctSeedERP__Product__r.AcctSeed__Inventory_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Product</label>
    <type>Checkbox</type>
</CustomField>