force-app/main/default/objects/AcctSeedERP__Material__c/fields/isDiscount__c.field-meta.xml
<CustomField>
    <fullName>isDiscount__c</fullName>
    <formula>ISPICKVAL(AcctSeedERP__Product__r.Family, &#39;Discount&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDiscount</label>
    <type>Checkbox</type>
</CustomField>