force-app/main/default/objects/AcctSeedERP__Material__c/fields/isInsuranceItem__c.field-meta.xml
<CustomField>
    <fullName>isInsuranceItem__c</fullName>
    <formula>AcctSeedERP__Product__r.RecordType.Name  = &#39;Insurance&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isInsuranceItem</label>
    <type>Checkbox</type>
</CustomField>