force-app/main/default/objects/AcctSeedERP__Material__c/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <description>Field to capture Product Record Type to use as filter in reports</description>
    <formula>AcctSeedERP__Product__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type</label>
    <type>Text</type>
</CustomField>