force-app/main/default/objects/AcctSeedERP__Material__c/fields/Quantity_Moved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Moved__c</fullName>
    <description>This field is managed by Trigger to update whenever anything is moved from Internal ERP</description>
    <label>Quantity Moved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>