force-app/main/default/objects/AcctSeedERP__Material__c/fields/Quantity_Specified_Override__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Specified_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Specified Override</label>
    <type>Checkbox</type>
</CustomField>