force-app/main/default/objects/AcctSeedERP__Material__c/fields/Retail_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Retail_ERP_Id__c</fullName>
    <formula>AcctSeedERP__Project__r.Retail_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail ERP Id</label>
    <type>Text</type>
</CustomField>