force-app/main/default/objects/AcctSeedERP__Material__c/fields/Return_Parent__c.field-meta.xml
<CustomField>
    <fullName>Return_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Parent</label>
    <referenceTo>AcctSeedERP__Material__c</referenceTo>
    <relationshipLabel>Materials (Return Parent)</relationshipLabel>
    <relationshipName>ReturndMaterials</relationshipName>
    <type>Lookup</type>
</CustomField>