force-app/main/default/objects/AcctSeedERP__Material__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <formula>GMBLASERP__Serial_Number__r.Name</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>