force-app/main/default/objects/AcctSeedERP__Material__c/fields/Supplier_Credit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Credit_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used ONLY in Warranty Recoverable. Specifies we want a credit from the supplier if true and if false we want the actual part</description>
    <label>Supplier Credit Requested</label>
    <type>Checkbox</type>
</CustomField>