force-app/main/default/objects/AcctSeedERP__Material__c/validationRules/AcctSeedERP__Project_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Project_Is_Required</fullName>
    <active>true</active>
    <description>project is required</description>
    <errorConditionFormula>ISBLANK(AcctSeedERP__Project__c)</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Project__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>