force-app/main/default/objects/AcctSeedERP__Material__c/validationRules/AcctSeedERP__Quantity_Per_Unit_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Quantity_Per_Unit_Positive_Value</fullName>
    <active>false</active>
    <description>quantity needed should not be less than zero</description>
    <errorConditionFormula>AcctSeedERP__Quantity_Per_Unit__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Quantity_Per_Unit__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to 0</errorMessage>
</ValidationRule>